manifests/ghost_chart.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ghost
  labels:
    goldilocks.fairwinds.com/enabled: "true"

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ghost
  namespace: ghost
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  tls:
  - hosts:
    - www.chloehiggins.co.uk
    - chloehiggins.co.uk
    secretName: ghost-ingress
  rules:
  - host: www.chloehiggins.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: ghost-ghost
          servicePort: 80
  - host: chloehiggins.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: ghost-ghost
          servicePort: 80
